# codex5.5-rag-project

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docs_architecture.md  pyproject.toml
deploy/: docker-compose.yml  init.sql
docs/: production_deploy_linux.md
evals/datasets/: medical_ragas_cases.example.jsonl
examples/: local_rag_demo.py
scripts/: create_medical_db.sh  ingest_medical_pdf.sh  ingest_sample.sh  query_medical.sh  query_sample.sh  ragas_medical_eval.py
src/codex55_rag_project/: __init__.py  main.py
src/codex55_rag_project/api/: app.py  dependencies.py  schemas.py
src/codex55_rag_project/bootstrap/: __init__.py  local_factory.py
src/codex55_rag_project/config/: __init__.py  settings.py
src/codex55_rag_project/core/: __init__.py  ingestion.py  langchain_ingestion.py  medical_pipeline.py  models.py  pipeline.py  ports.py
src/codex55_rag_project/data/: audit.py
src/codex55_rag_project/data/vector_store/: __init__.py  hybrid_pgvector.py  in_memory.py  langchain_pgvector.py  pgvector.py
src/codex55_rag_project/loaders/: __init__.py  pdf.py  text.py
src/codex55_rag_project/monitoring/: __init__.py  logging.py
src/codex55_rag_project/security/: __init__.py  auth.py
src/codex55_rag_project/services/: chunking.py
src/codex55_rag_project/services/embedding/: __init__.py  langchain_dashscope.py  (+1 more)
tests/: test_api.py  test_hybrid_pgvector.py  test_langchain_pgvector.py  test_langfuse_quickstart.py  test_medical_retrieval.py  test_pdf_loader.py  test_pgvector_sql.py  test_rag_pipeline.py  test_settings.py
(+17 files in other folders)
